--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <!-- Copyright -->
  <footer class="footer fixed-bottom mt-auto py-3 bg-light">
   <div class="container">
-    <span class="text-muted">Created By Dwimas Budi Sulistyo (:</span>
+    <span class="text-muted">Created By Faizal Muhamad Iqbal</span>
   </div>
 </footer>
   <!-- Copyright -->
